# forgetful

./: Dockerfile  README.md  Readme.rst  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/forgetful_esp32/: __about__.py  __init__.py
