[tool.poetry]
name = "forgetful"
version = "0.1.0"
description = ""
authors = ["David Francos <davidfrancos@sipay.es>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
face-recognition = "^1.3.0"
sklearn = "^0.0"
scipy = ">=1.4.1"
fastapi = {extras = ["sqlalchemy"], version = "^0.79.0"}
databases = {extras = ["aiopg"], version = "^0.6.1"}
python-multipart = "^0.0.5"
loguru = "^0.6.0"
uvicorn = "^0.18.2"
asyncpg = "^0.26.0"
yoloair = "^2022.8.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
