[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgetful-esp32"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "David Francos", email = "me@davidfrancos.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["httpx", "gtts", "deepsparse-nightly[yolov8]", "ultralytics", "pyttsx3"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/forgetful-esp32#readme"
Issues = "https://github.com/unknown/forgetful-esp32/issues"
Source = "https://github.com/unknown/forgetful-esp32"

[tool.hatch.version]
path = "src/forgetful_esp32/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/forgetful_esp32 --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/forgetful_esp32/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
forgetful_esp32 = "forgetful_esp32:run_main"
